--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "server.ts",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node ./src/index.ts"
+  },
   "dependencies": {
     "airtable": "^0.11.1",
     "dotenv": "^10.0.0",
@@ -11,10 +14,12 @@
     "nedb-promise": "^2.0.1",
     "thenify": "^3.3.1"
   },
-  "scripts": {
-    "start": "node server.js"
-  },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/nedb": "^1.8.12",
+    "@types/node": "^16.10.2",
+    "ts-node": "^10.2.1",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
 }
