--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "server.ts",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "node dist/index.js",
+    "serve": "ts-node ./src/index.ts",
+    "dev": "ts-node-dev --respawn ./src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "airtable": "^0.11.1",
