--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "serve": "ts-node ./src/index.ts",
-    "dev": "ts-node-dev --respawn ./src/index.ts",
+    "dev": "nodemon ./src/index.ts",
     "build": "tsc"
   },
   "dependencies": {
@@ -21,8 +21,8 @@
     "@types/express": "^4.17.13",
     "@types/nedb": "^1.8.12",
     "@types/node": "^16.10.2",
+    "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
-    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
 }
